manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-${SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  selector:
    app: ${LABEL}
  ports:
    - name: http
      port: 80
      targetPort: 80
