manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-${SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  ingressClassName: nginx
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-${SERVICE_NAME}
                port:
                  number: 80
